journal/flask-journal/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-journal
spec:
  selector:
    matchLabels:
      deployment: flask-journal
  template:
    metadata:
      labels:
        deployment: flask-journal
    spec:
      containers:
        - name: flask-journal
          image: ghcr.io/csfreak/flask_journal:v0.2.1
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 500m
          ports:
            - containerPort: 5000
              name: gunicorn-http
              protocol: TCP
          volumeMounts:
            - name: prom-data
              mountPath: /prom-data
      volumes:
        - name: prom-data
          emptyDir: {}
