journal/flask-journal/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: journal
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: flask-journal
    weight: 100
  wildcardPolicy: None
